[package]
name = "udp_polygon"
version = "0.2.3"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/upd_polygon"
license = "MIT"
keywords = ["udp", "datagram"]
repository = "https://github.com/elasticrash/udp_polygon"
authors = ["stefanos.kouroupis"]
description = "A UDP datagram library for Rust"

[[example]]
name = "send_with_timer"
path = "./examples/send_receive_with_timer.rs"
required-features = ["timers"]

[[example]]
name = "send_fa"
path = "./examples/send_fa.rs"

[[example]]
name = "send_toml"
path = "./examples/send_toml.rs"

[[example]]
name = "receive_fa"
path = "./examples/receive_fa.rs"

[[example]]
name = "receive_toml"
path = "./examples/receive_toml.rs"

[[example]]
name = "send_receive"
path = "./examples/send_receive.rs"

[lib]
name = "udp_polygon"
path = "./src/lib.rs"

[features]
timers = []

[dependencies]
toml = "0.7"
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "2.0.0"
serde_json = "1.0"
